tests/assets/test_suites/w3c_wsdl20/documents/good/XsImport-2G/reservationDetails.wsdl
<?xml version="1.0" encoding="utf-8" ?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/XsImport-2G/reservationDetails.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<description xmlns="http://www.w3.org/ns/wsdl"
	targetNamespace="http://greath.example.com/2004/services/retrieveDetails"
	xmlns:tns="http://greath.example.com/2004/services/retrieveDetails"
	xmlns:details="http://greath.example.com/2004/schemas/reservationDetails"
	xmlns:items="http://greath.example.com/2004/schemas/reservationItems"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<documentation>
		Test case XsImport-2G shows that the schemaLocation attribute is
		not required when importing a namespace that is defined in an
		inline schema contained in an included WSDL document. In this
		example, the second inline schema imports the namespace defined
		in the inline schema that is contained in the included WSDL
		document, but does not specify a schemaLocation since the WSDL
		processor can locate it by virtue of it being contained the
		included WSDL document.
	</documentation>

	<include location="reservationItems.wsdl" />

	<types>

		<xs:schema
			targetNamespace="http://greath.example.com/2004/schemas/reservationDetails"
			xmlns:items="http://greath.example.com/2004/schemas/reservationItems">

			<xs:import
				namespace="http://greath.example.com/2004/schemas/reservationItems" />

			<xs:element name="reservationDetails">
				<xs:complexType>
					<xs:sequence>
						<xs:element ref="items:confirmationNumber" />
						<xs:element ref="items:checkInDate" />
						<xs:element ref="items:checkOutDate" />
						<xs:element ref="items:roomType" />
						<xs:element ref="items:smoking" />
					</xs:sequence>
				</xs:complexType>
			</xs:element>
		</xs:schema>

	</types>

	<interface name="retrieveDetailsInterface">

		<operation name="retrieve"
			pattern="http://www.w3.org/ns/wsdl/in-out">
			<input messageLabel="In" element="#none" />
			<output messageLabel="Out"
				element="details:reservationDetails" />
		</operation>

	</interface>

</description>
